package com.eventsystem.domain.order;

public enum BuyerType {
    GUEST, MEMBER
}
