package com.eventsystem.domain.order;

public enum OrderStatus {
    ACTIVE, CHECKED_OUT, EXPIRED, CANCELLED
}